# MCIL_UART_CAN_Bridge

./: .gitignore  README.md
can_bridge/: .gitignore  CMakeLists.txt
can_bridge/src/: aci_parser.c  aci_parser.h  can_signals.c  can_signals.h  main.c  mcp2515.c  mcp2515.h
can_bridge/src/old_codes_from_v1/: 7second_pause_default_0.c  CMakeLists.txt  can_mapping.c  can_mapping_with_default_0.c  correct_conversion.c  correct_with_default1.c  correct_withled.c  correct_without_default.c  debug_uart.c  hardcode_loop.c  loopback_main.c  main.c  parameter_only.c
